<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>java.com.github.dcevm</groupId>
    <artifactId>dcevm-tests-17</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    <description>Tests for DCEVM 17 project</description>

    <properties>
        <asm.version>9.0</asm.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>${asm.version}</version>
        </dependency>

        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-commons</artifactId>
            <version>${asm.version}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>tools.jar</id>
            <activation>
                <jdk>1.15</jdk>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>com.sun</groupId>
                    <artifactId>tools</artifactId>
                    <version>1.15</version>
                    <scope>system</scope>
                    <systemPath>${java.home}/../lib/tools.jar</systemPath>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>-XX:+AllowEnhancedClassRedefinition -XX:+UseSerialGC -Xlog:redefine+class*=trace --add-opens=java.base/java.lang=ALL-UNNAMED -javaagent:${basedir}/dcevm-tests-agent.jar -Djava.library.path=${project.basedir}</argLine>
                    <excludedGroups>com.github.dcevm.test.category.Full</excludedGroups>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>compile-c</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>gcc</executable>
                            <workingDirectory>${project.basedir}/src/main/native</workingDirectory>
                            <arguments>
                                <argument>-O2</argument>
                                <argument>-Wall</argument>
                                <argument>-Werror</argument>
                                <argument>-I${java.home}/include/</argument>
                                <argument>-I${java.home}/include/linux/</argument>
                                <argument>-shared</argument>
                                <argument>-o</argument>
                                <argument>${project.basedir}/libnatives.so</argument>
                                <argument>${project.basedir}/src/main/native/natives.c</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
